--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -1,8 +1,3 @@
-#CFLAGS=$(OPTIM) $(CFLAGS1) $(EXTRA_CFLAGS)
-#LIBS=$(EXTRA_LIBS) $(LIBS1)
-#INCLUDES=$(INCLUDES1) $(INCLUDES0) $(EXTRA_INCLUDES)
-#LDFLAGS=$(LDFLAGS1) $(EXTRA_LDFLAGS)
-
 CC=@CC@
 RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
@@ -12,6 +7,7 @@ INCDIR=../../include
 OSDIR=$(INCDIR)/arch/@OSDIR@
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
+MKDEP=../../helpers/mkdep.sh
 
 LIB=file.a
 
@@ -42,86 +38,7 @@ $(LIB): $(OBJS)
 	$(AR) cr $@ $(OBJS)
 	$(RANLIB) $@
 
-#
-# We really don't expect end users to use this rule.  It works only with
-# gcc, and rebuilds Makefile.in.  You have to re-run configure after
-# using it.
-#
 depend:
-	cp Makefile.in Makefile.in.bak \
-	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
-	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c | sed -e "s%\\\\\(.\)%/\\1%g" >> Makefile.new \
-	    && sed -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' \
-                   -e '1,$$s: $(DEFOSDIR)/: $$(DEFOSDIR)/:g' \
-	           -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' Makefile.new \
-		> Makefile.in \
-	    && rm Makefile.new
+	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
-dir.o: dir.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_strings.h
-fileacc.o: fileacc.c ../unix/fileacc.c $(INCDIR)/apr_strings.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_tables.h $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_lock.h
-filedup.o: filedup.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_strings.h
-filestat.o: filestat.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
-maperrorcode.o: maperrorcode.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- ../../network_io/os2/os2calls.h ../../network_io/os2/os2nerrno.h
-open.o: open.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_dso.h $(INCDIR)/apr_strings.h
-pipe.o: pipe.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_strings.h
-readwrite.o: readwrite.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
-seek.o: seek.c $(OSDIR)/fileio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
