--- a/network_io/os2/Makefile.in
+++ b/network_io/os2/Makefile.in
@@ -1,8 +1,3 @@
-#CFLAGS=$(OPTIM) $(CFLAGS1) $(EXTRA_CFLAGS)
-#LIBS=$(EXTRA_LIBS) $(LIBS1)
-#INCLUDES=$(INCLUDES1) $(INCLUDES0) $(EXTRA_INCLUDES)
-#LDFLAGS=$(LDFLAGS1) $(EXTRA_LDFLAGS)
-
 CC=@CC@
 RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
@@ -12,6 +7,7 @@ INCDIR=../../include
 OSDIR=$(INCDIR)/arch/@OSDIR@
 DEFOSDIR=$(INCDIR)/arch/@DEFAULT_OSDIR@
 INCLUDES=-I$(INCDIR) -I$(OSDIR) -I$(DEFOSDIR)
+MKDEP=../../helpers/mkdep.sh
 
 LIB=network.a
 
@@ -39,76 +35,7 @@ $(LIB): $(OBJS)
 	$(AR) cr $@ $(OBJS)
 	$(RANLIB) $@
 
-#
-# We really don't expect end users to use this rule.  It works only with
-# gcc, and rebuilds Makefile.in.  You have to re-run configure after
-# using it.
-#
 depend:
-	cp Makefile.in Makefile.in.bak \
-	    && sed -ne '1,/^# DO NOT REMOVE/p' Makefile.in > Makefile.new \
-	    && gcc -MM $(INCLUDES) $(CFLAGS) *.c | sed -e "s%\\\\\(.\)%/\\1%g" >> Makefile.new \
-	    && sed -e '1,$$s: $(OSDIR)/: $$(OSDIR)/:g' \
-                   -e '1,$$s: $(DEFOSDIR)/: $$(DEFOSDIR)/:g' \
-	           -e '1,$$s: $(INCDIR)/: $$(INCDIR)/:g' Makefile.new \
-		> Makefile.in \
-	    && rm Makefile.new
+	$(MKDEP) $(INCLUDES) $(CFLAGS) *.c
 
 # DO NOT REMOVE
-os2calls.o: os2calls.c $(OSDIR)/networkio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/../network_io/os2/os2nerrno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(OSDIR)/os2calls.h $(OSDIR)/os2nerrno.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_tables.h
-poll.o: poll.c $(OSDIR)/networkio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/../network_io/os2/os2nerrno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(OSDIR)/os2calls.h $(OSDIR)/os2nerrno.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_tables.h
-sendrecv.o: sendrecv.c $(OSDIR)/networkio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/../network_io/os2/os2nerrno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(OSDIR)/os2calls.h $(OSDIR)/os2nerrno.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h
-sockaddr.o: sockaddr.c ../unix/sockaddr.c \
- $(OSDIR)/networkio.h $(INCDIR)/apr_private.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr.h $(INCDIR)/apr_errno.h \
- $(INCDIR)/../network_io/os2/os2nerrno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(OSDIR)/os2calls.h $(OSDIR)/os2nerrno.h \
- $(INCDIR)/apr_strings.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_tables.h ../unix/sa_common.c
-sockets.o: sockets.c $(OSDIR)/networkio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/../network_io/os2/os2nerrno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(OSDIR)/os2calls.h $(OSDIR)/os2nerrno.h \
- $(INCDIR)/apr_portable.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_tables.h os2calls.h os2nerrno.h
-sockopt.o: sockopt.c $(OSDIR)/networkio.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/../network_io/os2/os2nerrno.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
- $(OSDIR)/os2calls.h $(OSDIR)/os2nerrno.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_strings.h
