Add a make target for test.  This enters the test directory, does a make clean, and a make.  Then it tries to run each test program.  This doesn't work yet, because some of the test programs require user input.  I will be working on this problem so that 'make test' can correctly tell somebody if APR is working properly on their platform.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60854 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -105,6 +105,17 @@ exports:
 
 docs:
 	./helpers/scandoc -i./helpers/default.pl -p./docs/ ./include/*.h
+
+test: $(LIBAPR)
+	(cd test; make clean; make; \
+	cd test; \
+	for prog in `find . -type f -perm +u+x -name "test*" -print`; do \
+	    ./$$prog; \
+	    if [ $$? -eq 255 ]; then \
+	        echo "$$prog failed"; \
+	        break; \
+	    fi \
+	done )
 	
 # DO NOT REMOVE
 docs: $(INCDIR)/*.h
